# qwen2.5-structured-output-lora

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  FINAL_DEMO.py  FINAL_SUCCESS_REPORT.md  README.md  config.py  langfuse_tracker.py  lightweight_trainer.py  medium_article.md  pdf_processor.py  pipeline.py  pyproject.toml  qwen_model_testing.ipynb  qwen_official_trainer.py  requirements.txt  schemas.py  setup.py  training_data_summary.json  use_finetuned_qwen.py
qwen_ultra_lightweight_lora/: adapter_config.json  adapter_model.safetensors  training_config.json
vlm_dataset/: metadata.json
vlm_dataset/test/: state.json
vlm_dataset/train/: dataset_info.json  state.json
vlm_dataset/validation/: state.json
